# wlclient

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  PLAN.md  PROBLEMS.md  README.md  TODO.md  main-loader.cpp  main.cpp  sandbox.c  sandbox.cpp
_old/: .gitmodules  main-loader.cpp  main.cpp
_old/include/: core_init.h  entry.h  logger_config.h  platform.h  wayland_platform.h
_old/src/: entry.cpp  user_input.cpp
cmake_local/: WaylandGUIClangOptions.cmake
docs/: DESIGN.md  WL_CLIENT_REVIEW.md
include/: API.h  ansi_codes.h  arch.h  compiler.h  debug.h  logger_config.h  macro_magic.h  platform.h  renderer.h  types.h  user_input.h  wl-client.h  wl-util.h  wl-utils.h
include/backends/: wl-egl.h
lib/: core
lib/wayland/: fractional-scale-v1-client-protocol.c  fractional-scale-v1-client-protocol.h  generate-protocol-source-code.sh  viewporter-client-protocol.c  viewporter-client-protocol.h  wayland-client-protocol.c  wayland-client-protocol.h  xdg-shell-client-protocol.c  xdg-shell-client-protocol.h
scripts/: test-build-presets.sh
src/: _wl-client.c  core_init.cpp  debug.c  entry.cpp  wayland_platform.cpp  wayland_renderer.cpp  wl-client.c  wl-util.c  wl-utils.c
src/backends/: wl-egl.c
tests/: t-basic-init.c  t-tests.h  test_main.c
tests/unity/: unity.c  unity.h  unity_internals.h
